# hashmaxxing

./: .gitignore  Dockerfile.dev  Dockerfile.prod  LICENSE  README.md  build-image-dev.sh  build-image-prod.sh  run.sh
benchmarks/: benchmark_amd_epyc_7742.csv  benchmark_apple_m1-2.csv  benchmark_apple_m1.csv
config/: chains.json  contracts.json
hashmaxxing/: Cargo.toml
hashmaxxing/src/: hashmaxxing.rs  helpers.rs  main.rs  web3test.rs
